# duduSDKDemo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/dudusdkdemo/: SpeexMainActivity.java  TestActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/dudusdkdemo/: ExampleUnitTest.java
duduSdk/: build.gradle
duduSdk/src/main/: AndroidManifest.xml
duduSdk/src/main/cpp/: Android.mk  speex_jni.cpp
duduSdk/src/main/cpp/include/speex/: Makefile.am
duduSdk/src/main/java/com/czl/chatClient/: AppServerType.java  ChatMessageType.java  Constants.java  DuduClient.java  DuduSDK.java  FastJsonPaser.java  NetBroadCastReceiver.java  ServerFacoty.java
duduSdk/src/main/java/com/czl/chatClient/audio/: BytesUtil.java  DuduMixAudo.java  MultiAudioMixer.java  ShortData.java  Speex.java  TimesData.java
duduSdk/src/main/java/com/czl/chatClient/bean/: ChannalActiveusers.java  ChatMessage.java  DuduPosition.java  DuduUser.java  ETbean.java  GTbean.java  Groupbean.java  JsonString.java  NettyContent.java  NettyMessage.java  NettyServer.java  Pushmessage.java  Responbean.java  Trafficebean.java
duduSdk/src/main/java/com/czl/chatClient/handler/: HeartBeatHandler.java  MSChannelInitializer.java  NSChannelInitializer.java  NettyMessageDecoder.java  NettyMessageEncoder.java  NettymessageHandler.java  SocketClientShortHandler.java
duduSdk/src/main/res/layout/: activity_main.xml  fragment_main.xml
duduSdk/src/main/res/values/: strings.xml
(+37 files in other folders)
